tests/errors/syn_class_var15.java
public class syn_class_var15 {
static String[] name ;
}